[tool.poetry]
name = "otc-gen"
version = "0.1.0"
description = ""
authors = ["Ricardo Busquet <7198302+rbusquet@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-yubico = "^1.3.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
